# SCVP.Exercise2

./: CMakeLists.txt  exor.h  exor_main.cpp  instructions.txt  mon.h  nand.h  stim.h
